--- a/dwm.desktop
+++ b/dwm.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=dwm
 Comment=Dynamic window manager
-Exec=dwm
+#Exec=dwm
+Exec=/home/niru/.dwm/dwm_autostart.sh
 Icon=dwm
 Type=XSession
